# agent-sdk-bakeoff-mcp-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/: calendar_events.json  github_commits.json  github_prs.json  gmail_threads.json  jira_tickets.json  meta.json  slack_data.json  users.json
scripts/: google_auth_setup.py
server/: actions.py  config.py  data_store.py  main.py  time_utils.py
server/clients/: calendar_client.py  errors.py  github_client.py  gmail_client.py  google_auth.py  jira_client.py  slack_client.py
viewer/: index.html  serve.sh
