[project]
name = "pulse-assistant-mcp"
version = "0.1.0"
description = "Mock MCP server (Jira/GitHub/Slack/Gmail/Calendar) for the AI agent toolkit bake-off"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.28.1",
]

[project.scripts]
pulse-assistant-mcp = "server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
