[project]
name = "pulse-assistant-mcp"
version = "0.1.0"
description = "MCP server (Jira/GitHub/Slack/Gmail/Calendar) for the AI agent toolkit bake-off"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.28.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "google-api-python-client>=2.149.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
]

[project.scripts]
pulse-assistant-mcp = "server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
